--- a/search_more/search_more_app/templates/home.html
+++ b/search_more/search_more_app/templates/home.html
@@ -43,9 +43,15 @@
                 <option value="price_desc" {% if request.GET.sort == "price_desc" %}selected{% endif %}>高価格順</option> 
             </select>
         </div>
-     
         <button type="submit" class="bg-indigo-600 text-white py-2 px-4 rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">検索</button> 
+
+        <!-- 検索結果数の表示 -->
+        <div class="text-gray-700">
+            検索結果: {{ page_obj.paginator.count }} 件
+        </div>
     </form>
+
+    
 
     <ul class="mt-6 space-y-4 max-w-2xl mx-auto"> 
     {% for product in page_obj %} 
