update(home): html

--- a/search_more/search_more_app/templates/home.html
+++ b/search_more/search_more_app/templates/home.html
@@ -58,9 +58,9 @@
         <li class="bg-white p-4 rounded-lg shadow-md flex justify-between items-center">
             <div>
                 <h3 class="text-lg font-medium">{{ product.name }}</h3>
-                <p class="text-gray-500">{{ product.description }}</p>
+                <p class="text-gray-500">詳細: {{ product.description }}</p>
             </div>
-            <span class="text-gray-700 font-semibold">{{ product.price }}</span>
+            <span class="text-gray-700 font-semibold">{{ product.price }}円</span>
         </li> 
     {% empty %} 
         <li class="bg-white p-4 rounded-lg shadow-md text-center">結果が見つかりませんでした</li> 
